# animehot

./: .dockerignore  .env.crawler.example  .env.example  .gitignore  .gitmodules  Makefile  README.en.md  README.ja.md  README.md  docker-compose.crawler.yml  docker-compose.prod.yml  docker-compose.yml  go.mod  go.sum
configs/: config.example.json
data/: ips_grayscale.json  ips_hot.json  ips_sample.json
docs/: GRAYSCALE_TEST.md  LOCAL_FULL_TEST.md  REFACTOR_IP_DETAIL_CACHE.md
k8s/: alloy-configmap.yaml  alloy-daemonset.yaml  keda-scaledobject.yaml  namespace.yaml  py-crawler.yaml  secrets.yaml.template  (+1 more)
py-crawler/: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  docker-compose.dev.yml  docker-compose.yml  pyproject.toml  test_local.py
py-crawler/configs/: config.yaml
py-crawler/demos/: README.md  auth_dual_mode_test.py  concurrent_stress_test.py  dpop_analysis.py  dpop_full_test.py  dpop_generate_test.py  mercari_api_direct_test.py  mercari_api_test.py  mercari_body_analysis.py  mercari_hybrid_test.py  mercari_minimal_body_test.py  mercari_pagination_test.py  mercari_token_test.py  minimal_test.py  pagination_test.py  requirements-api-test.txt
py-crawler/docs/: DEPLOYMENT.md  DEVELOPMENT.md  IMPROVEMENTS.md
py-crawler/src/mercari_crawler/: __init__.py  api_client.py  auth_manager.py  config.py  dpop_generator.py  engine.py  main.py  metrics.py  models.py  rate_limiter.py  redis_queue.py  request_template.py  token_manager.py
py-crawler/tests/: conftest.py  test_config.py  test_dpop_generator.py  test_models.py  test_request_template.py
(+101 files in other folders)
